--- a/src/styles.css
+++ b/src/styles.css
@@ -26,8 +26,9 @@ input[type="range"] {
 input[type="range"]::-webkit-slider-thumb {
   -webkit-appearance: none;
   border: 2px solid white;
-  height: 24px;
-  width: 24px;
+  height: 22px;
+  width: 22px;
+  border-radius: 10000px;
   background: gray;
   cursor: pointer;
 }
