--- a/src/styles.css
+++ b/src/styles.css
@@ -26,17 +26,19 @@ input[type="range"] {
 input[type="range"]::-webkit-slider-thumb {
   -webkit-appearance: none;
   border: 2px solid white;
-  height: 22px;
-  width: 22px;
-  border-radius: 10000px;
+  height: 24px;
+  width: 24px;
   background: gray;
   cursor: pointer;
+  border-radius: 10000px;
 }
 
 input[type="color"] {
-  width: 100%;
   -webkit-appearance: none;
-  height: 16px;
+  height: 24px;
+  width: 24px;
+  border-radius: 4px;
+  width: 100%;
 }
 input[type="color"]::-webkit-color-swatch-wrapper {
   padding: 0;
@@ -45,8 +47,10 @@ input[type="color"]::-webkit-color-swatch {
   border: none;
 }
 
-input,
+input[type="text"],
 textarea {
   width: 100%;
   line-height: 1.5em;
+  border: 2px solid white;
+  font-size: 1em;
 }
